refactor: remove initial hello_world example
