# api/api/swagger/swagger.yaml
@@ -18,30 +18,6 @@ consumes:
 produces:
   - application/json
 paths:
-  /hello:
-    # binds a127 app logic to a route
-    x-swagger-router-controller: hello_world
-    get:
-      description: Returns 'Hello' to the caller
-      # used as the method name of the controller
-      operationId: hello
-      parameters:
-        - name: name
-          in: query
-          description: The name of the person to whom to say hello
-          required: false
-          type: string
-      responses:
-        "200":
-          description: Success
-          schema:
-            # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
-        # responses may fall through to errors
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
   /transactions:
     x-swagger-router-controller: transactions
     get:
@@ -89,7 +65,6 @@ paths:
       
   /swagger:
     x-swagger-pipe: swagger_raw
-# complex objects have schema definitions
 definitions:
   Account:
     type: string
@@ -143,12 +118,6 @@ definitions:
       hash:
         $ref: "#/definitions/BlockHash"
   ErrorResponse:
-    required:
-      - message
-    properties:
-      message:
-        type: string
-  HelloWorldResponse:
     required:
       - message
     properties:
