# api/app.js
@@ -17,7 +17,7 @@ SwaggerExpress.create(config, function (err, swaggerExpress) {
   var port = process.env.PORT || 10010
   app.listen(port)
 
-  if (swaggerExpress.runner.swagger.paths['/hello']) {
-    console.log('try this:\ncurl http://127.0.0.1:' + port + '/hello?name=Scott')
+  if (swaggerExpress.runner.swagger.paths['/transactions']) {
+    console.log(`Listening on port ${port}...`)
   }
 })
